Building a server with node.js

--- a/Js/index.html
+++ b/Js/index.html
@@ -7,7 +7,7 @@
     initial-scale=1.0"/>
     <title>My Page</title>
     <link rel = "stylesheet" href="css/main.css"/>
-    <script src="js2/error.js"></script>
+    <script src="js2/async_await.js"></script>
  </head>   
  <body>
     <main><h1>My Page</h1></main>
